# rootbot-mecanum-mobile-robot

./: README.md
src/lino_udev/scripts/: lino_udev.py
src/linorobot/launch/: bringup.launch  gmapping.launch  minimal.launch  navigate.launch  slam.launch
src/linorobot/launch/include/: laser.launch
src/linorobot/launch/include/lidar/: rplidar.launch
src/linorobot/launch/include/move_base/: move_base_mecanum.launch
src/linorobot/maps/: B_f.pgm  B_f.yaml
src/linorobot/param/imu/: imu_calib.yaml  imu_calib0.yaml  imu_calib1.yaml  imu_calib2.yaml
src/linorobot/param/navigation/: base_local_planner_holonomic_params.yaml  costmap_common_params.yaml  global_planner.yaml  local_costmap_params.yaml  move_base_params.yaml
src/results/: CMakeLists.txt  package.xml
src/results/launch/: Astar.launch
src/results/scripts/: Astar.py
src/rplidar_ros/src/: node.cpp
src/rrt_path_planner/: CMakeLists.txt  package.xml  rrt_global_planner_plugin.xml
src/rrt_path_planner/include/: rrt_global_planner.h
src/rrt_path_planner/scripts/: rrt_global_planner.py  rrt_planner.py  rrt_planner_plugin.xml
src/rrt_path_planner/src/: rrt_global_planner.cpp
