<?xml version="1.0"?>
<package format="2">
  <name>rrt_global_planner</name>
  <version>1.0.0</version>
  <description>RRT Global Planner plugin for move_base</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>angles</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>angles</exec_depend>
  
  <export>
    <nav_core plugin="${prefix}/rrt_global_planner_plugin.xml" />
  </export>
</package>